[tool.poetry]
name = "msr"
version = "0.1.0"
description = ""
authors = ["shate <tomashawro.kontakt@gmail.com>"]
readme = "README.md"
packages = [
    { include = "msr" },
]
[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.5.0"
scikit-learn = "^1.1.3"
matplotlib = "<3.6.1"
numpy = "^1.23.4"
plotly = "^5.11.0"
pandas = "^1.5.1"
wfdb = "^4.0.0"
tqdm = "^4.64.1"
hydra-colorlog = "^1.2.0"
seaborn = "^0.12.1"
torch = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
